--- a/docker/config/modelo-copy-and-paste.nginx.conf
+++ b/docker/config/modelo-copy-and-paste.nginx.conf
@@ -22,6 +22,17 @@ http {
   gzip_types text/plain text/css application/json application/x-java text/xml application/xml application/xml+rss text/java;
   gzip_buffers 16 8k;
 
+  upstream backend-upstream {
+
+    least_conn;
+
+    server backend:3000 weight=10 max_fails=3 fail_timeout=30s;
+    server backend2:3000 weight=10 max_fails=3 fail_timeout=30s;
+    server backend3:3000 weight=10 max_fails=3 fail_timeout=30s;
+
+    keepalive 64;
+  }
+
   server {
 
     listen 80;
@@ -50,7 +61,15 @@ http {
 
     location / {
 
-      proxy_pass http://backend:3000;
+      proxy_pass http://backend-upstream;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-NginX-Proxy true;
+      proxy_cache_bypass $http_upgrade;
     }
   }
 }
